[package]
name = "solana-workflow"
version = "0.1.0"
description = "Build immutable workflows for digital organisations"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
documentation="https://ob.syncvote.com/"
repository = "https://github.com/cattermelon-xyz/dash"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_workflow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
